change names of css classes in ReminderForm

--- a/calendar_frontend/calendar_frontend/calendar_frontend/src/ReminderForm.css
+++ b/calendar_frontend/calendar_frontend/calendar_frontend/src/ReminderForm.css
@@ -1,7 +1,7 @@
-.ReminderForm {
+.reminder-form {
   margin: 20px;
 }
 
-.ReminderForm-button-group {
+.reminder-form-button-group {
   margin-top: 10px;
 }
