--- a/calendar_frontend/calendar_frontend/calendar_frontend/src/Calendar.css
+++ b/calendar_frontend/calendar_frontend/calendar_frontend/src/Calendar.css
@@ -9,6 +9,9 @@
 }
 
 .calendar-week-header {
+  display: flex;
+  justify-content: center;
+  padding-top: 4px;
   min-width: 150px;
   min-height: 30px;
   border: #3f51b5d2 thin solid;
